# gtksourceview

./: .cvsignore  .editorconfig  .gitignore  .gitlab-ci.yml  AUTHORS  CONTRIBUTING.md  COPYING  ChangeLog  HACKING  MAINTAINERS  Makefile.am  NEWS  README  README.md  README.win32  README.win32.md  TODO  acinclude.m4  aclocal.m4  autogen.sh  config.h.win32.in  configure.ac  configure.in  git.mk  gtksourceview-1.0.pc.in  gtksourceview-2.0.pc.in  gtksourceview-3.0.pc.in  gtksourceview-uncrustify.cfg  gtksourceview-zip.in  gtksourceview.doap  gtksourceview.pc.in  meson.build  meson_options.txt  meson_postinstall.py  org.gnome.GtkSourceView.TestWidget.json
data/: Makefile.am  meson.build
data/fonts/: BuilderBlocks.ttx  Makefile.am
data/glade/: Makefile.am  glade.its  glade.pot  gtksourceview-glade.xml  gtksourceview.xml  gtksourceview.xml.in  meson.build  update-pot.sh
data/icons/: meson.build
data/language-specs/: Makefile.am  R.lang  abnf.lang  ada.lang  ansforth94.lang  asciidoc.lang  asp.lang  astro.lang  automake.lang  awk.lang  beancount.lang  bennugd.lang  bibtex.lang  blueprint.lang  boo.lang  bsl.lang  c.lang  cg.lang  changelog.lang  changes.lang  chdr.lang  check-language.sh  cmake.lang  cobol.lang  commonlisp.lang  convert.sh  cpp.lang  cpphdr.lang  csharp.lang  css.lang  csv.lang  cuda.lang  d.lang  dart.lang  def.lang  desktop.lang  diff.lang  docbook.lang  docker.lang  dosbatch.lang  (+141 more)
data/snippets/: licenses.snippets  meson.build  snippets.rng
data/styles/: Adwaita-dark.style-scheme.xml  Adwaita-dark.xml  Adwaita.style-scheme.xml  Adwaita.xml  Makefile.am  check-style.sh  classic-dark.xml  classic.xml  cobalt-light.xml  cobalt.xml  kate-dark.xml  kate.xml  meson.build  oblivion.xml  solarized-dark.xml  solarized-light.xml  styles.pot  styles.rng  tango.xml  testdark.xml
docs/: GtkSource.toml.in  lang-intro.md  lang-reference.md  lang-tutorial.md  meson.build  overview.md  porting-guide-3-to-4.md  porting-guide-4-to-5.md  snippet-reference.md  style-reference.md  urlmap.js
docs/reference/: .cvsignore  Makefile.am  gtksourceview-2.0-sections.txt  gtksourceview-2.0.types  gtksourceview-3.0-sections.txt  gtksourceview-3.0.types  gtksourceview-4.0-sections.txt  gtksourceview-5.0-sections.txt  gtksourceview-docs.sgml  gtksourceview-docs.xml  gtksourceview-docs.xml.in  gtksourceview-sections.txt  gtksourceview.types  intro.xml.in  lang-reference.sgml  lang-reference.xml  lang-reference.xml.in  lang-tutorial.sgml  lang-tutorial.xml  meson.build  porting-guide-3-to-4.xml  porting-guide-4-to-5.xml  porting-guide.xml  snippet-reference.xml.in  style-reference.xml  style-reference.xml.in
gtksourceview/: .cvsignore  GtkSource-3.0.metadata  GtkSource-5.metadata  GtkSource.metadata.in  GtkSourceView.css  Makefile.am  c-indenter.c  c-indenter.h  completion.ui  gseal-gtk-compat.h  gtk-source-buffer-input-stream.c  gtk-source-buffer-input-stream.h  gtk-source-buffer-internal.c  gtk-source-buffer-internal.h  gtk-source-buffer-output-stream.c  gtk-source-buffer-output-stream.h  gtk-source-buffer-private.h  gtk-source-buffer.c  gtk-source-buffer.h  gtk-source-completion-container.c  gtk-source-completion-container.h  gtk-source-completion-context.c  gtk-source-completion-context.h  gtk-source-completion-info.c  gtk-source-completion-info.h  gtk-source-completion-item.c  gtk-source-completion-item.h  gtk-source-completion-model.c  gtk-source-completion-model.h  gtk-source-completion-private.h  gtk-source-completion-proposal.c  gtk-source-completion-proposal.h  gtk-source-completion-provider.c  gtk-source-completion-provider.h  gtk-source-completion.c  gtk-source-completion.h  gtk-source-completion.ui  gtk-source-context-engine.c  gtk-source-context-engine.h  gtk-source-encoding-private.h  (+368 more)
gtksourceview/completion-providers/: Makefile.am  meson.build
gtksourceview/gnu-regex/: Makefile.am  README  regex.h
src/: Makefile.am  gtksourcebuffer.c  gtksourcebuffer.h  gtksourcelanguage.c  gtksourcelanguagesmanager.h  gtksourcemarker.c  gtksourceregex.h  gtksourcestylescheme.h  gtksourcetag.c  gtksourcetag.h  gtksourcetagstyle.h  gtksourcetagtable.c  gtksourcetagtable.h  gtksourceundomanager.c  gtksourceundomanager.h  gtksourceview-marshal.list  gtksourceview.c  gtksourceview.h  gtktextregion.c  gtktextregion.h  gtktextsearch.c  gtktextsearch.h  gtkundomanager.c  gtkundomanager.h  test-widget.c  testregion.c
tests/: .cvsignore  Makefile.am  completion-simple.c  gsc-provider-devhelp.c  gsc-provider-devhelp.h  gsc-provider-test.c  gsc-provider-test.h  gsc-provider-words.c  gsc-provider-words.h  gsc-utils-test.c  gsc-utils-test.h  meson.build  setup-file-saver.sh  test-buffer-output-stream.c  test-buffer.c  test-completion-model.c  test-completion-words.c  test-completion.c  test-completion.gresource.xml  test-completion.py  test-completion.ui  test-encoding.c  test-file-loader.c  test-file-saver.c  test-fold.c  test-int2str.c  test-iter.c  test-language.c  test-languagemanager.c  test-load.c  test-mark.c  test-preview.c  test-printcompositor.c  test-regex.c  test-region.c  test-scheme.xml  test-search-context.c  test-search-performances.c  test-search-ui.c  test-search-ui.gresource.xml  (+21 more)
testsuite/: Makefile.am  def.lang  gtksourceview.test.in  lsan.supp  meson.build  test-buffer-input-stream.c  test-buffer-output-stream.c  test-buffer.c  test-completion-model.c  test-completion-words.c  test-encoding.c  test-file-loader.c  test-file-saver.c  test-iter.c  test-language-specs.c  test-language.c  test-languagemanager.c  test-listsnapshot.c  test-mark.c  test-printcompositor.c  test-regex.c  test-region.c  test-search-context.c  test-snippets.c  test-space-drawer.c  test-stylescheme.c  test-styleschememanager.c  test-syntax.c  test-undo-manager.c  test-utils.c  test-view.c  test-vim-input.c  test-vim-state.c  test-vim-text-object.c  testsuite-2.lang  testsuite.gresource.xml  testsuite.lang
win32/: Makefile-newvs.am  Makefile.am  gen-enums.batin  gtksource_version_h.py  gtksourceview-introspection-msvc.mak  gtksourceview4-introspection-msvc.mak  gtksourceviewpc.py  pc_base.py
(+465 files in other folders)
